# Felips-Counter-Python

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: deploy.yml  preview.yml
felips_counter/: __init__.py  __main__.py
felips_counter/src/: reader.py  writer.py
felips_counter/tests/integration/: test_ignore.py
felips_counter/tests/unit/: test_reader.py  test_writer.py
