[metadata]
name = felips-counter
description = Count your project lines easily!
author = Blackoutseeker (Felipe Pereira)
license = MIT
license_files = LICENSE
platforms = win32, linux
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Utilities
    Topic :: Terminals
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Operating System :: Microsoft :: Windows

[options]
python_requires = >=3.7
install_requires = colorama~=0.4.6
